More progress for accessible generic ObjectMappers and Routes and JWT