@@ -1,8 +1,8 @@
 package org.genose.helisius_spring_training.services;
 
-import org.genose.helisius_spring_training.dto_mapper.UsersMapperDTO;
 import org.genose.helisius_spring_training.dtos.UsersGetResponseDTO;
 import org.genose.helisius_spring_training.entities.UsersEntity;
+import org.genose.helisius_spring_training.mapper.BaseMapperEntity;
 import org.genose.helisius_spring_training.repositories.UsersRepository;
 import org.genose.helisius_spring_training.utils.GNSClassStackUtils;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -10,9 +10,8 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
+import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 @Service
 public class UsersService extends BaseServiceImpl implements UserDetailsService {
@@ -26,23 +25,20 @@ public class UsersService extends BaseServiceImpl implements UserDetailsService 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         this.logger.info(GNSClassStackUtils.getEnclosingMethodObject(this) + " :: " + username);
-        return usersRepository.findByUsername(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+        if (username == null || username.isEmpty()) {
+            this.logger.error("{} :: Username is NULL ", GNSClassStackUtils.getEnclosingMethodObject(this));
+            throw new UsernameNotFoundException("username is null");
+        }
+        return this.usersRepository.findByEmail(username)
+                .orElseThrow(() -> new UsernameNotFoundException("username is not found"));
     }
 
     /* ****** ****** ****** ****** */
     @Override
     public Iterable<UsersGetResponseDTO> findAll() {
-        /* return this.mapAllEntitiesToDto(this.usersRepository,
-                UsersMapper::entityToDto);
-
-        */
-
-        return StreamSupport.stream(
-                        usersRepository.findAll().spliterator()
-                        , false)
-                .map(UsersMapperDTO::entityToDto)
-                .collect(Collectors.toList());
+        List<UsersEntity> entityList = (List<UsersEntity>) this.usersRepository.findAll();
+        return entityList.stream()
+                .map(entity -> (UsersGetResponseDTO) BaseMapperEntity.convertFromEntityToDTO(entity, UsersGetResponseDTO.class)).toList();
     }
 
     /* ****** ****** ****** ****** */
@@ -50,8 +46,8 @@ public class UsersService extends BaseServiceImpl implements UserDetailsService 
     public Optional<UsersGetResponseDTO> findById(Integer id) {
         Optional<UsersEntity> usersEntityOptional = usersRepository.findById(id);
         if (usersEntityOptional.isPresent()) {
-            UsersEntity entityToDto = usersEntityOptional.get();
-            UsersGetResponseDTO responseDTO = UsersMapperDTO.entityToDto(entityToDto);
+            UsersEntity entityObject = usersEntityOptional.get();
+            UsersGetResponseDTO responseDTO = (UsersGetResponseDTO) BaseMapperEntity.convertFromEntityToDTO(entityObject, UsersGetResponseDTO.class);
             return Optional.of(responseDTO);
         }
         return null;
